
subprojects {
  apply plugin: 'java'

  sourceCompatibility = 1.8
  targetCompatibility = 1.8

  tasks.withType(JavaCompile) {
  	options.encoding = 'UTF-8'
  }

  
  repositories {
    mavenLocal()
    
    maven { url "http://repo.maven.apache.org/maven2" }
  }

}
